--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FakeStore</title>
+  <title>Bhai Bhai Store</title>
   <link rel="stylesheet" href="./css/style.css" />
+  <!-- new add css bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" /> -->
 
   <!-- google Montserrat  font  -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,10 +21,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
 </head>
 
-<body>
+<body style="background-color:whitesmoke;">
   <header></header>
   <main class="main">
-    <div class="search-field">
+
+    <div class="w-50 mx-auto my-5">
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Search Your Cloath" aria-label="Recipient's username"
+          aria-describedby="button-addon2">
+        <button class="btn btn-outline-primary" type="button" id="button-addon2">Search</button>
+      </div>
+    </div>
+    <!-- <div class="search-field">
       <div class="search-box">
         <input id="input-field" class="search-field" type="text" />
         <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
@@ -28,11 +40,28 @@
           Search
         </button>
       </div>
+    </div> -->
+
+    <!-- single product display -->
+    <div class="row row-cols-1 row-cols-md-3 g-4 text-center mb-5" id="single-product">
+      <!-- <div class="col">
+        <div class="card h-100">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+              content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div> -->
+      
     </div>
-    <div class="row">
+
+
+    <div class="row ms-3">
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
-         
+
         </div>
       </div>
       <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
@@ -88,7 +117,12 @@
   </main>
   <footer></footer>
 
+  <!-- fontawsome link -->
+  <script src="https://kit.fontawesome.com/fd26134d84.js" crossorigin="anonymous"></script>
   <!-- add javascript  file  -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
+  </script>
   <script src="./js/app.js"></script>
 </body>
 
